toolchain code blocks

--- a/docs/amplify-theme/_layouts/toolchain.html
+++ b/docs/amplify-theme/_layouts/toolchain.html
@@ -38,7 +38,19 @@
                 </div>
                 <div class="integrate-content">
                     <p class="marketing-grid__excerpt">The Amplify Command Line Interface (CLI) is a unified tool to manage your AWS services. With just one tool to download and configure, you can control multiple AWS services from the command line and automate them through scripts.</p>
-                </div>
+				</div>
+				<div class="language-bash highlighter-rouge inline-block section-code-block">
+					<div class="highlight">
+						<pre class="highlight section-code-block">
+<code>$ npm install -g @aws-amplify/cli
+$ amplify configure
+$ cd &lt;app&gt;
+$ amplify init
+$ amplify add &lt;category&gt;
+$ amplify push</code>
+						</pre>
+					</div>    
+				</div>
                 <!-- <img id="code-window" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Images/Code-Window@2x.png"> -->
 			</div><!-- /.container -->
 		</div><!-- /.section -->
@@ -50,20 +62,36 @@
                 </div>
                 <div class="integrate-content">
                     <p class="marketing-grid__excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                </div>
+				</div>
+				<div class="language-bash highlighter-rouge inline-block section-code-block">
+					<div class="highlight">
+						<pre class="highlight section-code-block">
+<code>$ amplify add hosting
+$ amplify publish</code>
+						</pre>
+					</div>    
+				</div>
 			</div><!-- /.container -->
 		</div><!-- /.section -->
 
 		<div class="section section-top cli" id="bottom-section">
-                <div class="container">
-					<div class="header col-sm-10">
-						Cloud Automation and Code Generation
-					</div>
-                    <div class="integrate-content">
-						<p class="marketing-grid__excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-					</div>
-                </div><!-- /.container -->
-            </div><!-- /.section -->
+			<div class="container">
+				<div class="header col-sm-10">
+					Cloud Automation and Code Generation
+				</div>
+				<div class="integrate-content">
+					<p class="marketing-grid__excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+				</div>
+				<div class="language-bash highlighter-rouge inline-block section-code-block">
+					<div class="highlight">
+						<pre class="highlight section-code-block">
+<code>$ amplify codegen add
+$ amplify codegen generate</code>
+						</pre>
+					</div>    
+				</div>
+			</div><!-- /.container -->
+		</div><!-- /.section -->
 		{% include site-footer.html %}
 	</body>
 </html>
