moved toolchain code blocks + fixed homepage cloudgrid

--- a/docs/amplify-theme/_layouts/homepage.html
+++ b/docs/amplify-theme/_layouts/homepage.html
@@ -159,7 +159,7 @@
 						<img class="side-arrow" src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/icons/Small/More-Button-no-shadow.svg" />
 					</a>
 				</div> -->
-				<div class="grids-container row">
+				<div class="grids-container inline-block">
 					<div class="cloud-grid">
 						<p class="launch-grid-title">Cloud Features</p>
 						<div class="cloud-col">
