--- a/docs/amplify-theme/_layouts/toolchain.html
+++ b/docs/amplify-theme/_layouts/toolchain.html
@@ -36,10 +36,10 @@
                 <div class="header col-sm-10">
                     Effortlessly Build, Test, and Deploy
                 </div>
-                <div class="integrate-content">
+                <div class="integrate-content inline-block">
                     <p class="marketing-grid__excerpt">The Amplify Command Line Interface (CLI) is a unified tool to manage your AWS services. With just one tool to download and configure, you can control multiple AWS services from the command line and automate them through scripts.</p>
 				</div>
-				<div class="language-bash highlighter-rouge inline-block section-code-block">
+				<div class="language-bash highlighter-rouge inline-block section-code-block toolchain-code-block">
 					<div class="highlight">
 						<pre class="highlight section-code-block">
 <code>$ npm install -g @aws-amplify/cli
@@ -60,10 +60,10 @@ $ amplify push</code>
 				<div class="header col-sm-10">
 					Easy to Use Hosting for Static Assets and Websites
                 </div>
-                <div class="integrate-content">
+                <div class="integrate-content inline-block">
                     <p class="marketing-grid__excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 				</div>
-				<div class="language-bash highlighter-rouge inline-block section-code-block">
+				<div class="language-bash highlighter-rouge inline-block section-code-block toolchain-code-block">
 					<div class="highlight">
 						<pre class="highlight section-code-block">
 <code>$ amplify add hosting
@@ -79,10 +79,10 @@ $ amplify publish</code>
 				<div class="header col-sm-10">
 					Cloud Automation and Code Generation
 				</div>
-				<div class="integrate-content">
+				<div class="integrate-content inline-block">
 					<p class="marketing-grid__excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 				</div>
-				<div class="language-bash highlighter-rouge inline-block section-code-block">
+				<div class="language-bash highlighter-rouge inline-block section-code-block toolchain-code-block">
 					<div class="highlight">
 						<pre class="highlight section-code-block">
 <code>$ amplify codegen add
