add hide sublist

--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -23,6 +23,10 @@
     display: block !important;
 }
 
+.hide {
+    display: none !important;
+}
+
 .content-filter {
     float:none;
     .filter-item {
@@ -2529,7 +2533,9 @@ li {
         width: 360px;
 
         pre {
-            overflow-x: hidden;
+            @media (min-width: 829px) {
+                overflow-x: hidden;
+            }
         }
     }
 
