--- a/docs/amplify-theme/_layouts/blog.html
+++ b/docs/amplify-theme/_layouts/blog.html
@@ -45,7 +45,7 @@
 														<div class='in-this-page js-sections'></div>
 													{% else %}
 														<li class="section-link">
-															<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }}">{{ item.title }}</a>
+															<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}{{ item.url }}">{{ item.title }}</a>
 														</li>
 													{% endif %}	
 												{% endfor %}
