--- a/docs/amplify-theme/_layouts/categories.html
+++ b/docs/amplify-theme/_layouts/categories.html
@@ -3,94 +3,240 @@
 	<head>
 		{% include site-head.html %}
 	</head>
-	<body class="{{ site.amplify.color_theme }}">
-		{% include site-header.html %}
+	<body class="{{ site.amplify.color_theme }}" data-spy="scroll" data-target=".js-scrollspy">
+		{% include docs-header.html %}
 
-		{% if page.marketing_grid%}
-		<div class="page-container">
-			<div class="section-category">
-		
-				<div class="container">
-					<div class="row">
-	
-						<div>
-							<div class="dev-guide-heading">
-								<div class="row">
-									{% for item in page.marketing_grid %}
-										<div class="col-sm-8 col-lg-8">
-											<span>
-												<div class="dev-guide-content" data-mh>
-													<p class="dev-guide__title">{{ item.title }}</p>
-													<!-- <p class="dev-guide__excerpt">{{ item.excerpt }}</p> -->
-												</div><!-- /.nav-grid__content -->
-											</span><!-- /.nav-grid__item -->
-										</div><!-- /.col -->
+		<div class="section-padding">
+			<div class="container docs-page-container">
+				<!-- <div class="github-edit-link">
+					<a title="Edit this page on github" class="" target="_blank" rel="noopener noreferrer" 
+					href="{{ site.github.repository_url }}{{ page.path }}">
+						<span class="">Edit this page</span> 
+					</a>				
+				</div> -->
+
+				{% if site.category_list %}
+					{% for category in site.category_list %}
+						{% for item in category.subs %}
+							{% if page.url contains item.url %}
+								{% assign isPageInCategories = true %}	
+							{% endif %}	
+						{% endfor %}
+					{% endfor %}
+				{% endif %}
+
+				<div class="row">
+					<div class="col-md-4 col-md-offset-1 dev-guide-container">
+						{% if page.url contains 'tutorials' %}
+						<div class="sections-list-wrapper">
+							<div class="sections-list js-affix js-scrollspy">
+								<div class="dev-guide"> 
+									<div class="left-nav-section" id="{{ category.category }}">
+										<div class="feature-list">
+											<div class='in-this-page js-sections'></div>
+										</div>
+									</div>
+								</div>						
+							</div><!-- /.sections-list -->
+						</div>
+						{% else %}
+						<!-- <div class="version-section">
+							<p>Version</p>
+							<div class="version-selector">
+								<select id="version-selector-select">
+									<option value="1.x.x">1.x.x (Stable release)</option>
+								</select>
+							</div>
+						</div> -->
+						<div class="version-section visible-xs">
+							<p>View Section</p>
+							<div class="version-selector">
+								<select onchange="location = this.value" id="section-select">
+									{% for category in site.category_list %}
+										<option value={% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}{{ category.base_url }}>{{ category.title }}</option>
 									{% endfor %}
-								</div><!-- /.row -->
-								<!-- <div>
-									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/cli_guide"> <button class="btn install-amplify-cli" >Install Amplify CLI</button> </a>
-								</div> -->
-							</div><!-- /.nav-grid -->
-						</div><!-- /.col -->
-					</div><!-- /.row -->
-				</div><!-- /.container -->
-			</div><!-- /.section -->
-			{% endif %}
-
-			{% if site.category_list %}			
-				<div>
-					<div class="container">
-							<div class="row">
-								<div>
-									<div class="nav-grid nav-grid--out">
+								</select>
+							</div>
+						</div>
+						<div class="sections-list-wrapper">
+							<div class="sections-list js-affix js-scrollspy">
+								<div class="dev-guide"> 
+									{% if site.category_list %}
 										{% for category in site.category_list %}
-											{% if category.title contains "Setup & Installation" %}
-											{% else %}
-												<div class="section-top section-top-category" {% if category.title == 'User Interface' %}id="bottom-section"{% endif %}>
-													<div class="container">
-															<div class="header">
-																{{ category.title}}
-															</div>
-															<div class="subheader">
-																{{ category.excerpt}}
-															</div>
-															<div class="row">
-																{% for item in category.subs %}
-																	<div class="col-xs-12 col-sm-6 col-lg-4">
-																		<a href="{% if item.url_external %} {{ item.url_external }} {% endif %}{% if item.url %}{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }}{% endif %}" class="dev-guide-item">
-																			<img src="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.icon }}" class="dev-guide-icon" /> 
-																			<div class="dev-guide-content" data-mh>
-																				<div class="dev-guide-title" >
-																					{{ item.title }} 
-																				</div>
-																				<div class="dev-guide-excerpt">{{ item.excerpt }}</div>
-																			</div><!-- /.nav-grid__content -->
-																			<div class="services-container">
-																				<div class='dev-guide-services'>
-																					{% for service in item.services %} 
-																						<i onClick="window.open('{{ service.url }}', '_blank'); return false;" >
-																							{{ service.title }}
-																						</i>
-																					{% endfor %}
-																				</div >
-																			</div>
-																		</a><!-- /.nav-grid__item -->
-																	</div><!-- /.col -->
-																{% endfor %}
-															</div><!-- /.row -->
-													</div>
-												</div>
-											{% endif %}
+										<div class="left-nav-section" id="{{ category.category }}">
+											<p class="gray-section-head hidden-xs">{{ category.title }}</p>
+											<div class="feature-list">
+												{% for item in category.subs %}
+													{% if page.url contains item.url %}
+														<div class='in-this-page js-sections'></div>
+													{% else %}
+														<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}{{ item.url }}" class="section-head">{{ item.title }}</a>
+													{% endif %}	
+												{% endfor %}
+											</div>
+										</div>
 										{% endfor %}
-									</div><!-- /.nav-grid -->
-								</div><!-- /.col -->
-							</div><!-- /.row -->
-						
+									{% endif %}
+								</div>						
+							</div><!-- /.sections-list -->
+						</div>
+						{% endif %}
+					</div><!-- /.col -->
+						<div class="col-md-8 section-top docs-container">
+							{% if page.url contains 'quick_start' %}
+							<div class='js-library-selector-text'>
+								Select your framework
+							</div>
+							<div class="js-library-selector">
+								<img id="js-library-icon" /> 
+								<select onchange="location = this.value" id="js-library-select">
+									{% for item in site.js_libraries %}
+										<option value={{ item.url }}>{{ item.title }}</option>
+									{% endfor %}
+								</select>
+							</div>
+							{% endif %}
+							<div class="content">
+								{{ content }}
+							</div><!-- /.content -->
+						</div><!-- /.col -->
+				</div><!-- /.row -->
+			</div><!-- /.container -->
+		</div><!-- /.section -->
+		<!-- <div class="section section--grey"> -->
+			<!-- <div class="container"> -->
+				<!-- <div class="row"> -->
+					<!-- <div class="col-md-7"> -->
+						<!-- {% include comments.html %} -->
+					<!-- </div>/.col -->
+				<!-- </div>/.row -->
+			<!-- </div>/.container -->
+		<!-- </div>/.section -->
+		<div class="js-footer-area">
+			{% if page.page_nav.prev.content or page.page_nav.next.content %}
+				<nav class="page-nav">
+					<div class="container">
+						<div class="row">
+							<div class="col-xs-12">
+								{% if page.page_nav.prev.content and page.page_nav.prev.url %}
+									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ page.page_nav.prev.url }}" class="page-nav__item page-nav__item--prev">
+										<i class="icon icon--arrow-left"></i>
+										{{ page.page_nav.prev.content }}
+									</a><!-- /.page-nav__item -->
+								{% endif %}
+								{% if page.page_nav.next.content and page.page_nav.next.url %}
+									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ page.page_nav.next.url }}" class="page-nav__item page-nav__item--next">
+										{{ page.page_nav.next.content }}
+										<i class="icon icon--arrow-right"></i>
+									</a><!-- /.page-nav__item -->
+								{% endif %}
+							</div><!-- /.col -->
+						</div><!-- /.row -->
 					</div><!-- /.container -->
-				</div><!-- /.section -->		
+				</nav><!-- /.page-nav -->
 			{% endif %}
-		</div>
-
-		{% include site-footer.html %}
+			{% if page.micro_nav == true %}
+				{% include micro-nav.html %}
+			{% endif %}
+			{% include site-footer.html %}
+		</div><!-- /.js-footer-area -->
 	</body>
-</html>
+	<script>
+		if (window.innerWidth < 828) 
+		{	let flag;
+			{% for category in site.category_list %}
+				flag = false;
+				{% for item in category.subs %}
+					{% if page.url contains item.url %}
+						flag = true;
+					{% endif %}
+				{% endfor %}
+				if (flag) {
+					document.getElementById("{{ category.category }}").classList.add('visible-xs');
+					document.getElementById("section-select").value = "{{ category.base_url }}";
+				}
+				else {
+					document.getElementById("{{ category.category }}").classList.add('hidden-xs');
+				}
+			{% endfor %}
+
+			const view_section_box = document.getElementById("section-select");
+			if (view_section_box) 
+			{
+				view_section_box.style.background = "url('/images/icons/Minis/Arrows.svg') no-repeat"; 
+				view_section_box.style.backgroundPosition = "240px 5px";
+			}
+		}
+		{% if page.url contains 'quick_start' %}
+			let tabs = document.getElementsByClassName('tabs');
+			for (let i = 0; i < tabs.length; i++) {
+				tabs[i].style.display = 'none';
+			}
+			if ( $.urlParam( 'platform' )) {
+				var platform = $.urlParam('platform');
+				if (platform) {
+					document.getElementById("js-library-select").value = "?platform="+platform;
+					let icon = document.getElementById("js-library-icon");
+					icons = {"react": "React-Small-White@1x.png", "react-native": "React-Small-White@1x.png", "angular": "Angular-Med-White@1x.png", "purejs": "JS-Small-White@1x.png", "ionic": "Ionic-Color@1x.png"};
+					icon.src = "{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/" + icons[platform];
+				}
+			}
+			else {
+				var platform = "react";
+				document.getElementById("js-library-select").value = "?platform="+platform;
+				let icon = document.getElementById("js-library-icon");
+				icons = {"react": "React-Small-White@1x.png", "react-native": "React-Small-White@1x.png", "angular": "Angular-Med-White@1x.png", "purejs": "JS-Small-White@1x.png", "ionic": "Ionic-Color@1x.png"};
+				icon.src = "{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/images/Logos/" + icons[platform];
+			}
+		{% endif %}
+	</script>
+	<!-- 
+	{% if jekyll.environment == 'production' %}
+		<script>
+			var setBackgroundImage = function() {
+				const version_box = document.getElementById("version-selector-select");
+				const view_section_box = document.getElementById("section-select");
+				const js_library_box = document.getElementById("js-library-select");
+				version_box.style.background = "url('/amplify-js/images/icons/Minis/Arrows.svg') no-repeat"; 
+				view_section_box.style.background = "url('/amplify-js/images/icons/Minis/Arrows.svg') no-repeat"; 
+				if (js_library_box) js_library_box.style.background = "url('/amplify-js/images/icons/Minis/Arrows.svg') no-repeat";
+				if (window.innerWidth < 828) {
+					version_box.style.backgroundPosition = "240px 5px";
+					view_section_box.style.backgroundPosition = "240px 5px";
+					if (js_library_box) js_library_box.style.backgroundPosition = "160px -4px";
+				}
+				else {
+					version_box.style.backgroundPosition = "164px 3px";
+					view_section_box.style.backgroundPosition = "164px 3px";
+					if (js_library_box) js_library_box.style.backgroundPosition = "160px -4px";
+				}
+			}
+
+			setBackgroundImage();
+		</script>
+	{% else %}
+		<script>
+			var setBackgroundImage = function() {
+				const version_box = document.getElementById("version-selector-select");
+				const view_section_box = document.getElementById("section-select");
+				const js_library_box = document.getElementById("js-library-select");
+				version_box.style.background = "url('/images/icons/Minis/Arrows.svg') no-repeat"; 
+				view_section_box.style.background = "url('/images/icons/Minis/Arrows.svg') no-repeat"; 
+				if (js_library_box) js_library_box.style.background = "url('/images/icons/Minis/Arrows.svg') no-repeat"; 
+				if (window.innerWidth < 828) {
+					version_box.style.backgroundPosition = "240px 5px";
+					view_section_box.style.backgroundPosition = "240px 5px";
+					if (js_library_box) js_library_box.style.backgroundPosition = "160px -4px";
+				}
+				else {
+					version_box.style.backgroundPosition = "164px 3px";
+					view_section_box.style.backgroundPosition = "164px 3px";
+					if (js_library_box) js_library_box.style.backgroundPosition = "160px -4px";
+				}
+			}
+
+			setBackgroundImage();
+		</script>
+	{% endif %}
+	</html>
+-->
