--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -53,7 +53,7 @@
 							<div class="version-selector">
 								<select onchange="location = this.value" id="section-select">
 									{% for category in site.category_list %}
-										<option value={% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ category.base_url }}>{{ category.title }}</option>
+										<option value={% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}{{ category.base_url }}>{{ category.title }}</option>
 									{% endfor %}
 								</select>
 							</div>
@@ -70,7 +70,7 @@
 													{% if page.url contains item.url %}
 														<div class='in-this-page js-sections'></div>
 													{% else %}
-														<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }}" class="section-head">{{ item.title }}</a>
+														<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}{{ item.url }}" class="section-head">{{ item.title }}</a>
 													{% endif %}	
 												{% endfor %}
 											</div>
