--- a/docs/amplify-theme/_layouts/ui_library.html
+++ b/docs/amplify-theme/_layouts/ui_library.html
@@ -14,7 +14,7 @@
 							<div class="align-inner">
 								<h1 class="hero-subheader__title">A beautiful component library connected to the cloud</h1>
 								<div id="button-logo-container">
-									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/ui_guide" class="btn btn--dark btn--rounded btn--w-icon">
+									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/media/ui_guide" class="btn btn--dark btn--rounded btn--w-icon">
 										{% if button.icon %}<i class="icon icon--{{ button.icon }}"></i>{% endif %}
 										Get Started
 									</a>
