remove syntax highlighting nt

--- a/docs/amplify-theme/_sass/components/_redesign.scss
+++ b/docs/amplify-theme/_sass/components/_redesign.scss
@@ -2042,7 +2042,9 @@ li {
         background: #FF9900;
     }
     
-
+    .nt {
+        color: white;
+    }
 
     .dev-guide-container {
         float: left;
