--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -70,7 +70,17 @@
 													{% if page.url contains item.url %}
 														<div class='in-this-page js-sections'></div>
 													{% else %}
-														<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}{{ item.url }}" class="section-head">{{ item.title }}</a>
+														<a href="{% if item.url_external  %}
+																		{{ item.url_external }} 
+																	{% endif %}
+																	{% if item.url %}
+																		{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}{{ item.url }} 
+																	{% endif %}" 
+															{% if item.url_external %} 
+																target="_blank" 
+															{% endif %}
+															class="section-head">{{ item.title }}
+														</a>
 													{% endif %}	
 												{% endfor %}
 											</div>
