left nav scroll fix

--- a/docs/amplify-theme/_layouts/ui_library.html
+++ b/docs/amplify-theme/_layouts/ui_library.html
@@ -64,7 +64,7 @@
 					</div><!-- /.col -->
 					<div class="col-md-4 col-md-offset-1 dev-guide-container styleguide-nav">
 						<div class="sections-list-wrapper">
-							<div class="sections-list js-affix js-scrollspy">
+							<div class="sections-list js-affix js-scrollspy styleguide-affix">
 								<div class="dev-guide"> 
 									{% if site.styleguide %}
 										<div class="left-nav-section hidden-xs">
