--- a/docs/amplify-theme/_includes/docs-header.html
+++ b/docs/amplify-theme/_includes/docs-header.html
@@ -91,21 +91,21 @@
 							<div id="docs-select" class="dropdown">
 								<button class="dropbtn white-text">Docs</button>
 								<div class="dropdown-content">
-									<a href="https://docs.aws.amazon.com/aws-mobile/latest/developerguide/getting-started.html" target="_blank">iOS</a>
-									<a href="https://docs.aws.amazon.com/aws-mobile/latest/developerguide/getting-started.html" target="_blank">Android</a>
-									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/media/quick_start?platform=purejs">JavaScript</a>
-									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/media/quick_start?platform=react-native">React Native</a>
+									<a href="https://docs.aws.amazon.com/aws-mobile/latest/developerguide/getting-started.html" target="_blank"><p>iOS</p></a>
+									<a href="https://docs.aws.amazon.com/aws-mobile/latest/developerguide/getting-started.html" target="_blank"><p>Android</p></a>
+									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/media/quick_start?platform=purejs"><p>JavaScript</p></a>
+									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/media/quick_start?platform=react-native"><p>React Native</p></a>
 								</div>
 							</div>
 						</li>
 						<li>
-							<div id="api-select" class="dropdown white-text">
+							<div id="api-select" class="dropdown">
 								<button class="dropbtn white-text">API</button>
 								<div class="dropdown-content">
-									<a href="https://aws.github.io/aws-sdk-ios/docs/reference/" target="_blank">iOS</a>
-									<a href="https://aws.github.io/aws-sdk-android/docs/reference/" target="_blank">Android</a>
-									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/api/" target="_blank">JavaScript</a>
-									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/api/" target="_blank">React Native</a>
+									<a href="https://aws.github.io/aws-sdk-ios/docs/reference/" target="_blank"><p>iOS</p></a>
+									<a href="https://aws.github.io/aws-sdk-android/docs/reference/" target="_blank"><p>Android</p></a>
+									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/api/" target="_blank"><p>JavaScript</p></a>
+									<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/api/" target="_blank"><p>React Native</p></a>
 								</div>
 							</div>
 						</li>
