--- a/docs/amplify-theme/_layouts/get_started.html
+++ b/docs/amplify-theme/_layouts/get_started.html
@@ -84,7 +84,7 @@
                                 <div class="header col-sm-8">
                                     Install the CLI
                                 </div>
-                                <div class="subheader col-sm-10">
+                                <div class="subheader above-code-block">
                                     The Amplify Command Line Interface (CLI) is a unified toolchain to create, integrate, and manage the AWS cloud services for your app. Install <a id="node-link" href="https://nodejs.org/en/download/" target="_blank">Node.js® and npm</a> if they are not already on your machine.
                                 </div>
                             </div>
@@ -94,7 +94,6 @@
                                 <div class="highlight">
                                     <pre class="highlight section-code-block">
 <code>$ npm install -g @aws-amplify/cli
-
 $ amplify configure</code>
                                     </pre>
                                 </div>    
