--- a/docs/amplify-theme/_layouts/get_started.html
+++ b/docs/amplify-theme/_layouts/get_started.html
@@ -1,10 +1,10 @@
 {% if jekyll.environment == 'production' %}
 <html>
   <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115615468-1"></script>     <script>         window.dataLayer = window.dataLayer || [];         function gtag(){dataLayer.push(arguments);}         gtag('js', new Date());         gtag('config', 'UA-115615468-1',{             'linker': {             'domains': ['aws-amplify.github.io']             }         });         var navigateToNextPage = function (elem) {             var path = "/{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/get_started";             location.replace( path + location.search);         };       gtag('event', 'page_view', {         'event_callback': navigateToNextPage         });     </script> <meta http-equiv="refresh" content="5; /url={% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/get_started" />
+        <!-- Global site tag (gtag.js) - Google Analytics -->     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115615468-1"></script>     <script>         window.dataLayer = window.dataLayer || [];         function gtag(){dataLayer.push(arguments);}         gtag('js', new Date());         gtag('config', 'UA-115615468-1',{             'linker': {             'domains': ['aws-amplify.github.io']             }         });         var navigateToNextPage = function (elem) {             var path = "/{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/media/quick_start";             location.replace( path + location.search);         };       gtag('event', 'page_view', {         'event_callback': navigateToNextPage         });     </script> <meta http-equiv="refresh" content="5; /url={% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/media/quick_start" />
   </head>
   <body>
-    <p>Redirecting to <a href="/{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/get_started">https://aws-amplify.github.io/media/get_started</a></p>
+    <p>Redirecting to <a href="/{% if jekyll.environment == 'production' %}{{ site.amplify.docs_baseurl }}{% endif %}/media/quick_start">https://aws-amplify.github.io/amplify-js/media/quick_start</a></p>
   </body>
 </html>
 {% else %}
