--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -199,7 +199,7 @@
 				}
 			}
 			else {
-				var platform = "react";
+				var platform = "purejs";
 				let selector = document.getElementById("js-library-select");
 				selector.value = "?platform="+platform;
 				let icon = document.getElementById("js-library-icon");
